versioned_docs/version-23.1/deploy/deployment-option/self-hosted/kubernetes/kubernetes-deploy.mdx
---
title: Deploy Redpanda in Kubernetes
tags:
  - Kubernetes
---

<head>
    <meta name="title" content="Deploy Redpanda using the Helm Chart | Redpanda Docs"/>
    <meta name="description" content="Use the Redpanda Helm chart to deploy a Redpanda cluster in Kubernetes."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/deploy/deployment-option/self-hosted/kubernetes/kubernetes-deploy/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DefaultComponents from "./shared/_default-components.mdx"

This topic describes how to use the Redpanda Helm chart to deploy a Redpanda cluster in Kubernetes.

## Prerequisites

Make sure that your Kubernetes cluster meets the [requirements](../kubernetes-cluster-requirements).

## Deploy Redpanda and Redpanda Console

In this step, you deploy Redpanda and Redpanda Console. Redpanda Console is a developer-friendly web UI for managing and debugging your Redpanda cluster and your applications. Redpanda Console is included as a subchart in the Redpanda Helm chart.

1. Add the Redpanda Helm chart repository and install cert-manager using Helm:

  ```bash
  helm repo add redpanda https://charts.redpanda.com
  helm repo add jetstack https://charts.jetstack.io
  helm repo update
  helm install cert-manager jetstack/cert-manager  --set installCRDs=true --namespace cert-manager  --create-namespace
  ```

  The Redpanda Helm chart uses cert-manager to manage TLS certificates. TLS is enabled by default.

1. Install the Redpanda Helm chart:

  ```bash
  helm install redpanda redpanda/redpanda \
    --namespace redpanda \
    --create-namespace
  ```

1. Wait for the Redpanda cluster to be ready:

  ```bash
  kubectl -n redpanda rollout status statefulset redpanda --watch
  ```

  When the Redpanda cluster is ready, the output should look similar to the following:

  ```
  statefulset rolling update complete 3 pods at revision redpanda-8654f645b4...
  ```

1. Verify that each Redpanda broker is scheduled on only one Kubernetes node:

  ```bash
  kubectl get pod -n redpanda  \
  -o=custom-columns=NODE:.spec.nodeName,NAME:.metadata.name -l \
  app.kubernetes.io/component=redpanda-statefulset
  ```

  <details>
  <summary>
  Example output
  </summary>
  
  ```
  example-worker3   redpanda-0
  example-worker2   redpanda-1
  example-worker    redpanda-2
  ```

  </details>

## Explore the default Kubernetes components

<DefaultComponents/>

## Customize the deployment

The Redpanda Helm chart is configured in the [`values.yaml`](https://artifacthub.io/packages/helm/redpanda-data/redpanda?modal=values) file.

To learn how to customize the Redpanda Helm chart, see [Customize the Helm Chart](../../../../../manage/kubernetes/configure-helm-chart).

## Find the latest versions of the Redpanda Helm charts

The `helm install` command always pulls the latest version of the chart. To list the current latest version of the Redpanda Helm chart, use the `helm search` command:

```bash
helm search repo redpanda
```

<details>
<summary>
Example output
</summary>

```
NAME             	CHART VERSION	APP VERSION	DESCRIPTION                                      
redpanda/redpanda	2.4.0        	v22.3.9    	Redpanda is the real-time engine for modern apps.
redpanda/console 	0.3.3        	v2.0.2     	Helm chart to deploy Redpanda Console.
```

</details>

To find the versions that are installed on your machine, run the following:

```bash
helm list -n redpanda
```

## Production considerations

If you're deploying Redpanda for production, see the [production best practices](../kubernetes-best-practices). 

## Next steps

See the [Manage Kubernetes topics](../../../../../manage/kubernetes) to learn how to customize the deployment to meet your needs.

